-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: 10.2
-
Fix Version/s: 10.2.4
-
Component/s: Authentication and Privilege System
-
Labels:
-
Sprint:10.2.4-1, 10.2.4-1, 10.2.4-2
An attempt to start MariaDB 10.2 (as of 39d2c7b18d, Oct 27) on a simple MySQL 5.7 datadir ends with the error:
2016-10-29 12:45:31 140477392623488 [ERROR] Fatal error: mysql.user table is damaged or in unsupported 3.20 format.
|
I tried to start the server with --skip-grant-tables and run mysql_upgrade to see if we can work around the problem this way if it comes to it; the server starts, but mysql_upgrade throws all kinds of errors. At this point I'm not sure whether it's because of skip-grant-tables (I doubt that), or it will be the next problem on the way of fixing MySQL 5.7 => MariaDB 10.2 upgrade.
- blocks
-
MDEV-11000 Compatibility issues between 10.2 and MySQL 5.7
-
- Closed
-
- relates to
-
MDEV-18768 Automate upgrades from MySQL 5.7 with auth_socket to MariaDB with our unix_socket
-
- Closed
-