MDEV-11170: MariaDB 10.2 cannot start on MySQL 5.7 datadir

PART 2 of the fix adds the logic of not using password column, unless it
exists. If password column is missing we attempt to use plugin &&
authentication_string columns.